added fonts and pictures

--- a/sass/blocks/container.scss
+++ b/sass/blocks/container.scss
@@ -5,7 +5,5 @@
   padding: 0 10px;
 
 }
-@media (max-width: $toast-breakpoint-small) {
-}
-@media (max-width: $toast-breakpoint-medium) {
+@media (min-width: $desctop-width) {
 }
