--- a/sass/blocks/footer.scss
+++ b/sass/blocks/footer.scss
@@ -1,6 +1,4 @@
 .footer{}
 }
-@media (max-width: $toast-breakpoint-small) {
-}
-@media (max-width: $toast-breakpoint-medium) {
+@media (min-width: $desctop-width) {
 }
