--- a/sass/blocks/header.scss
+++ b/sass/blocks/header.scss
@@ -1,5 +1,5 @@
 .header{
-  
+
 }
 .header__upper{
   padding: 10px 0;
@@ -33,7 +33,5 @@
 .header__toggle{
 
 }
-@media (max-width: $toast-breakpoint-small) {
-}
-@media (max-width: $toast-breakpoint-medium) {
+@media (min-width: $desctop-width) {
 }
