--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,5 @@
-@import "bootstrap_components.scss";
-@import "toast_grid.scss";
-@import "mixins.scss";
+//@import "toast_grid.scss";
+//@import "mixins.scss";
 @import "placeholders.scss";
 @import "variables.scss";
 @import "global/fonts.scss";
