added several styles

--- a/sass/blocks/container.scss
+++ b/sass/blocks/container.scss
@@ -2,8 +2,9 @@
   width: 320px;
   margin: 0 auto;
   box-sizing: border-box;
-
 }
 @media (min-width: $desctop-width) {
-  width: 1346px;
+  .container{
+    width: 1346px;
+  }
 }
