--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -6,6 +6,7 @@ div{
 }
 a{
   text-decoration: none;
+  color: inherit;
 }
 div, section, article, span, h1, h2, h3, h4, h5{
   outline: 1px solid green;
