--- a/sass/blocks/bestsellers.scss
+++ b/sass/blocks/bestsellers.scss
@@ -1,3 +1,12 @@
-
+.bestsellers{
+  font-family: "Open Sans";
+  &__title{
+    margin: 0 auto;
+    color: #060606;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 24px;
+  }
+}
 @media (min-width: $desctop-width) {
 }
