--- a/sass/blocks/goods-slider.scss
+++ b/sass/blocks/goods-slider.scss
@@ -1,8 +1,33 @@
 .goods-slider{
-  width: 322px;
-  height: 228px;
+
 }
 .goods-slider__item{
+  width: 322px;
+  height: 228px;
+  padding: 32px 40px;
+  color: #ffffff;
+  font-family: "Open Sans";
+  text-align: center;
+  &-name{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 24px;
+  }
+  &-description{
+    height: 36px;
+    overflow: hidden; 
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+  }
+  &-link-more{
+    display: inline-block;
+    padding: 15px 20px;
+    background-color: #fb0040;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 23px;
+  }
   &--forest{
     background-image: url("../img/content/main_forest.png");
     background-size: 100%;
