added first styles for desctop version

--- a/sass/blocks/goods-categories.scss
+++ b/sass/blocks/goods-categories.scss
@@ -2,4 +2,8 @@
   display: none;
 }
 @media (min-width: $desctop-width) {
+  .goods-categories{
+    display: flex;
+    flex-direction: column;
+  }
 }
