--- a/sass/blocks/bestseller.scss
+++ b/sass/blocks/bestseller.scss
@@ -15,6 +15,9 @@
     text-transform: uppercase;
     text-align: center;
   }
+  &__rate{
+    margin-bottom: 15px;
+  }
   &__info{
     display: flex;
     justify-content: space-around;
@@ -27,7 +30,27 @@
     font-size: 11px;
     font-weight: 400;
     line-height: 18px;
-    &::before{}
+    &::before{
+      position: absolute;
+      left: -20px;
+      /* >> Symbol you want to use: */
+      content: "\f00c";
+      /* >> Name of the FA free font (mandatory), e.g.:
+                 - 'Font Awesome 5 Free' for Regular and Solid symbols;
+                 - 'Font Awesome 5 Brand' for Brands symbols. */
+      font-family: 'Font Awesome 5 Free';
+      /* >> Weight of the font (mandatory):
+                 - 400 for Regular and Brands symbols;
+                 - 900 for Solid symbols;
+                 - 300 for Light symbols. */
+      font-weight: 900;
+      font-size: 15px;
+      color: #00b02a;
+
+      /* >> Optional styling: */
+      display: inline-block;
+    /* ... */
+    }
   }
   &__code{
     margin-bottom: 15px;
@@ -73,6 +96,9 @@
     font-size: 11px;
     font-weight: 400;
     line-height: 18px;
+  }
+  &__order{
+    display: flex;
   }
 }
 @media (min-width: $desctop-width) {
