--- a/sass/blocks/goods-slider.scss
+++ b/sass/blocks/goods-slider.scss
@@ -2,12 +2,17 @@
 
 }
 .goods-slider__item{
+  position: relative;
+  display: none;
   width: 322px;
   height: 228px;
   padding: 32px 40px;
   color: #ffffff;
   font-family: "Open Sans";
   text-align: center;
+  &--active{
+    display: block;
+  }
   &-name{
     font-size: 24px;
     font-weight: 700;
@@ -15,7 +20,7 @@
   }
   &-description{
     height: 36px;
-    overflow: hidden; 
+    overflow: hidden;
     font-size: 12px;
     font-weight: 400;
     line-height: 18px;
@@ -28,6 +33,12 @@
     font-weight: 700;
     line-height: 23px;
   }
+  &-image{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: none;
+  }
   &--forest{
     background-image: url("../img/content/main_forest.png");
     background-size: 100%;
@@ -35,4 +46,32 @@
   }
 }
 @media (min-width: $desctop-width) {
+  .goods-slider__item{
+    width: 639px;
+    text-align: left;
+    &-name{
+      width: 285px;
+      text-align: left;
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 35px;
+    }
+    &-description{
+      width: 285px;
+      text-align: left;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 22px;
+    }
+    &-link-more{
+      display: inline-block;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 23px;
+      }
+    &-image{
+      display: block;
+      z-index: 3;
+    }
+  }
 }
