--- a/sass/blocks/item-category.scss
+++ b/sass/blocks/item-category.scss
@@ -1,3 +1,24 @@
 
 @media (min-width: $desctop-width) {
+  .item-category{
+    width: 345px;
+    margin-bottom: 25px;
+    padding-top: 15px;
+    background-color: #ebebeb;
+    &__title{
+      display: inline-block;
+      vertical-align: top;
+      padding: 5px 20px;
+      color: #000000;
+      background-color: #fff;
+      font-family: "Open Sans";
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 28.79px;
+    }
+    &__image{
+      display: block;
+      margin: 0 auto;
+    }
+  }
 }
