--- a/sass/blocks/bestseller.scss
+++ b/sass/blocks/bestseller.scss
@@ -1,18 +1,18 @@
 .bestseller{
   @extend %fl-column;
   align-items: center;
+  justify-content: space-between;
   padding-top: 27px;
   width: 244px;
   border: 1px solid #f4f4f4;
   font-family: "Open Sans";
   &__title{
-    padding: 0 35px;
+    padding: 0 25px;
     margin-bottom: 15px;
     color: #1d1d1d;
     font-size: 14px;
     font-weight: 700;
     line-height: 20px;
-    text-transform: uppercase;
     text-align: center;
   }
   &__rate{
@@ -26,6 +26,7 @@
   &__count{
     position: relative;
     display: block;
+    padding-right: 25px;
     color: #1d1d1d;
     font-size: 11px;
     font-weight: 400;
@@ -64,10 +65,12 @@
   }
   &__prices{
     display: flex;
+    margin-bottom: 15px;
     justify-content: space-around;
     text-transform: uppercase;
   }
   &__prev-price{
+    padding-right: 15px;
     color: #cbcbcb;
     font-size: 14px;
     font-weight: 700;
@@ -83,6 +86,7 @@
   &__saving{
     display: flex;
     justify-content: space-around;
+    margin-bottom: 15px;
   }
   &__saving-name{
     color: #1d1d1d;
@@ -98,8 +102,56 @@
     line-height: 18px;
   }
   &__order{
+    display: none;
+  }
+  &__order-add{
     display: flex;
+    padding-right: 15px;
+  }
+  &__order-min,
+  &__order-plus{
+    padding: 0 7px;
+    box-sizing: border-box;
+    border: 1px solid #acacac;
+    opacity: 0.5;
+    color: #050505;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+  }
+  &__order-value{
+    padding: 0 5px;
+    color: #050505;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 31px;
+  }
+  &__card-link{
+    padding: 5px 10px;
+    background-color: #fb0040;
+    color: #fefcfc;
+    font-family: "Open Sans";
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 24px;
   }
 }
 @media (min-width: $desctop-width) {
+  .bestseller{
+    &__image{
+      height: 138px;
+    }
+  }
+}
+.bestseller:hover .bestseller__order{
+  display: flex;
+}
+.bestseller:hover .bestseller__title{
+  color: #fb0040;
+}
+.bestseller:hover {
+  box-shadow: 0 8px 34px 1px rgba(0, 0, 0, 0.18);
+  border: 1px solid #ededed;
 }
