--- a/sass/blocks/bestseller.scss
+++ b/sass/blocks/bestseller.scss
@@ -140,6 +140,8 @@
 }
 @media (min-width: $desctop-width) {
   .bestseller{
+    float: left;
+    width: 270px;
     &__image{
       height: 138px;
     }
