--- a/sass/blocks/container.scss
+++ b/sass/blocks/container.scss
@@ -6,5 +6,10 @@
 @media (min-width: $desctop-width) {
   .container{
     width: 1346px;
+    &--footer{
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
   }
 }
