--- a/sass/blocks/bestsellers-slider.scss
+++ b/sass/blocks/bestsellers-slider.scss
@@ -5,6 +5,7 @@
     &__wrapper{
       position: relative;
       width: 9999px;
+      transition: all ease 3s;
     }
     &__controls{
       position: absolute;
