--- a/sass/blocks/bestsellers.scss
+++ b/sass/blocks/bestsellers.scss
@@ -6,6 +6,7 @@
     font-size: 18px;
     font-weight: 700;
     line-height: 24px;
+    text-align: center;
   }
 }
 @media (min-width: $desctop-width) {
@@ -17,7 +18,8 @@
       font-family: "Open Sans";
       font-size: 28px;
       font-weight: 700;
-      line-height: 24px;  
+      line-height: 24px;
+      text-align: left;
     }
   }
 }
