--- a/sass/blocks/item-category.scss
+++ b/sass/blocks/item-category.scss
@@ -7,7 +7,6 @@
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: 0;
-    text-align: center;
     &__title{
       display: inline-block;
       vertical-align: top;
@@ -24,4 +23,7 @@
       margin: 0 auto;
     }
   }
+}
+.item-category:nth-child(2n){
+  margin-top: 27px;
 }
