--- a/sass/blocks/bestseller.scss
+++ b/sass/blocks/bestseller.scss
@@ -146,6 +146,9 @@
     &__image{
       height: 138px;
     }
+    &__count::before{
+      left: -15px;
+    }
   }
 }
 .bestseller:hover .bestseller__order{
