--- a/sass/global/scaffolding.scss
+++ b/sass/global/scaffolding.scss
@@ -9,7 +9,7 @@ a{
   color: inherit;
 }
 div, section, article, span, h1, h2, h3, h4, h5{
-  outline: 1px solid green;
+  //outline: 1px solid green;
 }
 button{
   background-color: transparent;
