--- a/sass/blocks/discount-item.scss
+++ b/sass/blocks/discount-item.scss
@@ -5,7 +5,7 @@
   .discount-item{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     width: 304px;
     height: 100%;
     background-color: #ebebeb;
@@ -13,9 +13,12 @@
       display: flex;
       justify-content: space-between;
     }
+    &__name-logo{
+    }
     &__name{
       display: flex;
       flex-direction: column;
+      margin-bottom: 38px;
     }
     &__model{
       font-family: "Open Sans";
@@ -36,6 +39,7 @@
       background-color: #fff343;
     }
     &__image{
+      margin-bottom: 16px;
       width: 225px;
       height: 195px;
       align-self: center;
@@ -46,6 +50,8 @@
       align-items: center;
     }
     &__timer-info{
+      margin-bottom: 5px;
+      padding-left: 37px;
       color: #444444;
       font-family: "Open Sans-Semibold";
       font-size: 14px;
