--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,3 +19,4 @@
 @import "blocks/item-category.scss";
 @import "blocks/discounts.scss";
 @import "blocks/discount-item.scss";
+@import "blocks/remark.scss";
