--- a/sass/blocks/goods.scss
+++ b/sass/blocks/goods.scss
@@ -2,5 +2,13 @@
     display: flex;
     justify-content: space-between;
 }
+@media (min-width: $tablet-width) {
+  .goods{
+    flex-direction: column;
+  }
+}
 @media (min-width: $desctop-width) {
+  .goods{
+    flex-direction: row;
+  }
 }
