--- a/sass/blocks/goods-slider.scss
+++ b/sass/blocks/goods-slider.scss
@@ -80,9 +80,10 @@
     background-repeat: no-repeat;
   }
 }
-@media (min-width: $desctop-width) {
+@media (min-width: $tablet-width) {
   .goods-slider{
-    margin-bottom: 0;
+    margin-bottom: 20px;
+    order: 1;
   }
   .goods-slider__items-wrapper{
     height: 100%;
@@ -90,7 +91,7 @@
   .goods-slider__indicators{
     position: absolute;
     bottom: 41px;
-    left: 43px;
+    left: 41px;
     display: block;
     width: 76px;
     height: 16px;
@@ -104,9 +105,54 @@
     }
   }
   .goods-slider__controls-next{
-    right: -639px
+    right: -768px;
+  }
+  .goods-slider__controls-prev{
+    left: 0;
   }
   .goods-slider__item{
+    margin: 0 auto;
+    width: 100%;
+    height: 423px;
+    padding: 112px 40px 50px;
+    text-align: left;
+    &-name{
+      width: 286px;
+      margin-bottom: 15px;
+      text-align: left;
+      font-size: 32px;
+      font-weight: 700;
+      line-height: 35px;
+    }
+    &-description{
+      width: 285px;
+      margin-bottom: 15px;
+      text-align: left;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 22px;
+    }
+    &-link-more{
+      display: inline-block;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 23px;
+      padding: 7px 21px;
+      }
+    &-image{
+      display: block;
+      z-index: 3;
+    }
+  }
+}
+@media (min-width: $desctop-width){
+  .goods-slider{
+    margin-bottom: 0;
+    order: 1;
+    margin: 0;
+  }
+  .goods-slider__item{
+    margin: 0 auto;
     width: 639px;
     height: 423px;
     padding: 112px 40px 50px;
@@ -138,5 +184,27 @@
       display: block;
       z-index: 3;
     }
+  }
+  .goods-slider__indicators{
+    position: absolute;
+    bottom: 41px;
+    left: 43px;
+    display: block;
+    width: 76px;
+    height: 16px;
+    display: flex;
+    justify-content: space-between;
+    &-item{
+      height: 10px;
+      width: 10px;
+      border: 1px solid #ffffff;
+      border-radius: 50%;
+    }
+  }
+  .goods-slider__controls-next{
+    right: -639px;
+  }
+  .goods-slider__controls-prev{
+    left: 0;
   }
 }
