--- a/sass/blocks/container.scss
+++ b/sass/blocks/container.scss
@@ -5,7 +5,7 @@
 }
 @media (min-width: $tablet-width) {
   .container{
-    width: 768x;
+    width: 820px;
     &--footer{
       display: flex;
       flex-direction: row;
