repaired bestseller slider for tablet and desctop

--- a/sass/blocks/bestseller.scss
+++ b/sass/blocks/bestseller.scss
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding-top: 27px;
   margin-bottom: 50px;
-  width: 275px;
+  width: 270px;
   float: left;
   border: 1px solid #f4f4f4;
   font-family: "Open Sans";
@@ -152,10 +152,14 @@
     padding-bottom: 15px;
   }
 }
+@media (min-width: $tablet-width){
+  .bestseller{
+    width: 270px;
+  }
+}
 @media (min-width: $desctop-width) {
   .bestseller{
     float: left;
-    width: 270px;
     margin-bottom: 50px;
     z-index:3;
     &__image{
